{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 107,
  "lineage": "7c1e9a5a-9c72-10ce-bb97-d1bd606450e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nutria_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:internet-gateway/igw-07fdd0f72c0d5ff75",
            "id": "igw-07fdd0f72c0d5ff75",
            "owner_id": "539247448895",
            "tags": {
              "Name": "nutria-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-igw",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nutria_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nutria_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:loadbalancer/app/nutria-alb-adcd61/57cab2e66365b6b3",
            "arn_suffix": "app/nutria-alb-adcd61/57cab2e66365b6b3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nutria-alb-adcd61-970243738.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:loadbalancer/app/nutria-alb-adcd61/57cab2e66365b6b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nutria-alb-adcd61",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f1ac923426a024e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036c30ab0588dd8cc"
              },
              {
                "subnet_id": "subnet-0fe556eb7dfbc4d2d"
              }
            ],
            "subnets": [
              "subnet-036c30ab0588dd8cc",
              "subnet-0fe556eb7dfbc4d2d"
            ],
            "tags": {
              "Name": "nutria-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-alb",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "vpc_id": "vpc-0cf55e4796f8a3b0e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.fargate_sg",
            "aws_subnet.public",
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available",
            "random_id.bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nutria_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:listener/app/nutria-alb-adcd61/57cab2e66365b6b3/7f21b2c8b2c1456f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:targetgroup/nutria-tg-adcd61/7061cfb66c8e9a3d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:listener/app/nutria-alb-adcd61/57cab2e66365b6b3/7f21b2c8b2c1456f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:loadbalancer/app/nutria-alb-adcd61/57cab2e66365b6b3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nutria_alb",
            "aws_lb_target_group.meal_optimizer_tg",
            "aws_security_group.fargate_sg",
            "aws_subnet.public",
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "meal_optimizer_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:targetgroup/nutria-tg-adcd61/7061cfb66c8e9a3d",
            "arn_suffix": "targetgroup/nutria-tg-adcd61/7061cfb66c8e9a3d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:539247448895:targetgroup/nutria-tg-adcd61/7061cfb66c8e9a3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:539247448895:loadbalancer/app/nutria-alb-adcd61/57cab2e66365b6b3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nutria-tg-adcd61",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nutria-target-group"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-target-group",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nutria_vpc",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:route-table/rtb-0a8dfffe6e93df829",
            "id": "rtb-0a8dfffe6e93df829",
            "owner_id": "539247448895",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fdd0f72c0d5ff75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nutria-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-public-rt",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.nutria_igw",
            "aws_vpc.nutria_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01208df50a1a72e11",
            "route_table_id": "rtb-0a8dfffe6e93df829",
            "subnet_id": "subnet-0fe556eb7dfbc4d2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.nutria_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e07ea5c3bf72c8bf",
            "route_table_id": "rtb-0a8dfffe6e93df829",
            "subnet_id": "subnet-036c30ab0588dd8cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.nutria_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:security-group/sg-0f1ac923426a024e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1ac923426a024e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nutria-fargate-20250719055940513700000002",
            "name_prefix": "nutria-fargate-",
            "owner_id": "539247448895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nutria-fargate-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-fargate-sg",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nutria_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:subnet/subnet-0fe556eb7dfbc4d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe556eb7dfbc4d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247448895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nutria-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-public-subnet-1",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:subnet/subnet-036c30ab0588dd8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036c30ab0588dd8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247448895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nutria-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-public-subnet-2",
              "Project": "nutria",
              "Region": "eu-west-1"
            },
            "vpc_id": "vpc-0cf55e4796f8a3b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nutria_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nutria_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247448895:vpc/vpc-0cf55e4796f8a3b0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083b3bb0929b5e7ec",
            "default_route_table_id": "rtb-0dbbdbcbda9b07df6",
            "default_security_group_id": "sg-03945b6e271c85cbc",
            "dhcp_options_id": "dopt-0ed39596afc149750",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf55e4796f8a3b0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbbdbcbda9b07df6",
            "owner_id": "539247448895",
            "tags": {
              "Name": "nutria-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nutria-vpc",
              "Project": "nutria",
              "Region": "eu-west-1"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}